# vetkd-devkit

./: .gitignore  .stylelintignore  Cargo.toml  README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: cdk.yml  clippy.yml  encrypted-maps-example.yml  eslint.yml  examples-password-manager-with-metadata.yml  examples-password-manager.yml  key-manager-example.yml  provision-darwin.sh  provision-linux.sh  provision-pocket-ic-server.sh  sdk_utils.yml
cdk/: Cargo.toml  README.md
cdk/encrypted_maps/: Cargo.toml  README.md
cdk/encrypted_maps/src/: lib.rs
cdk/encrypted_maps/tests/: tests.rs
cdk/encrypted_maps_example/: Cargo.toml  Makefile  dfx.json  encrypted_maps_example.did
cdk/encrypted_maps_example/src/: lib.rs  wasm_only.rs
cdk/encrypted_maps_example/src/declarations/encrypted_maps_example/: encrypted_maps_example.did  encrypted_maps_example.did.d.ts  encrypted_maps_example.did.js
cdk/encrypted_maps_example/tests/: tests.rs
cdk/key_manager/: Cargo.toml  README.md
cdk/key_manager/src/: lib.rs  vetkd_api_types.rs
cdk/key_manager/tests/: tests.rs
cdk/key_manager_example/: Cargo.toml  Makefile  dfx.json  key_manager_example.did
cdk/key_manager_example/src/: lib.rs  wasm_only.rs
cdk/key_manager_example/src/declarations/key_manager_example/: index.d.ts  key_manager_example.did  key_manager_example.did.d.ts  key_manager_example.did.js
cdk/key_manager_example/tests/: tests.rs
cdk/test_utils/: Cargo.toml
cdk/test_utils/src/: lib.rs
cdk/types/: Cargo.toml
cdk/types/src/: lib.rs
cdk/utils/: Cargo.toml
cdk/utils/pkg/: ic-vetkd-cdk-utils-0.1.0.tgz  ic_vetkd_cdk_utils.d.ts  ic_vetkd_cdk_utils.js  ic_vetkd_cdk_utils_bg.js  ic_vetkd_cdk_utils_bg.wasm  ic_vetkd_cdk_utils_bg.wasm.d.ts  package.json
cdk/utils/src/: lib.rs
examples/encrypted_notes/: README.md  canister_ids.json  deploy_locally.sh  dfx.json
examples/encrypted_notes/backend/: Cargo.toml  Makefile
examples/encrypted_notes/backend/src/: lib.rs
examples/encrypted_notes/frontend/: .prettierignore  .prettierrc  eslint.config.mjs  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
examples/encrypted_notes/frontend/src/: App.svelte  main.ts  svelte-icons.d.ts  vite-env.d.ts
examples/encrypted_notes/frontend/src/components/: Disclaimer.svelte  DisclaimerCopy.svelte  EditNote.svelte  EditPassword.svelte  EditVault.svelte  Hero.svelte  LayoutAuthenticated.svelte  NewNote.svelte  NewPassword.svelte  Note.svelte  NoteEditor.svelte  Notes.svelte  Notifications.svelte  Password.svelte  PasswordEditor.svelte  Passwords.svelte  SharingEditor.svelte  SidebarLayout.svelte  Vault.svelte  Vaults.svelte
examples/encrypted_notes/frontend/src/declarations/: encrypted_notes_canister.did  encrypted_notes_canister.did.d.ts  encrypted_notes_canister.did.js  index.d.ts  index.js  password_manager_with_metadata.did.d.ts  password_manager_with_metadata.did.js
examples/encrypted_notes/frontend/src/lib/: encrypted_maps.ts  note.ts  note_manager.ts  password.ts  password_manager.ts  vault.ts
examples/encrypted_notes/frontend/src/store/: auth.ts  draft.ts  notifications.ts  vaults.ts
examples/password_manager/: README.md  deploy_locally.sh  dfx.json
examples/password_manager/frontend/: README.md  jsconfig.json  package.json  tailwind.config.cjs  vite.config.js
examples/password_manager/frontend/src/: App.svelte  main.ts
examples/password_manager/frontend/src/components/: Disclaimer.svelte  EditPassword.svelte  EditVault.svelte  Header.svelte  Hero.svelte  NewPassword.svelte  Notifications.svelte  Password.svelte  PasswordEditor.svelte  Passwords.svelte  SharingEditor.svelte  SidebarLayout.svelte  Vault.svelte  VaultEditor.svelte.b  Vaults.svelte
examples/password_manager/frontend/src/lib/: encrypted_maps.ts  password.ts  vault.ts
examples/password_manager/frontend/src/store/: auth.ts  draft.ts  notifications.ts  vaults.ts
examples/password_manager_with_metadata/: README.md  deploy_locally.sh  dfx.json
examples/password_manager_with_metadata/backend/: Cargo.toml  Makefile  backend.did
examples/password_manager_with_metadata/backend/src/: lib.rs  types.rs  wasm_only.rs
examples/password_manager_with_metadata/frontend/: README.md  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
examples/password_manager_with_metadata/frontend/public/: .ic-assets.json5
examples/password_manager_with_metadata/frontend/src/: App.svelte  main.ts
examples/password_manager_with_metadata/frontend/src/components/: Disclaimer.svelte  EditPassword.svelte  EditVault.svelte  Header.svelte  Hero.svelte  LayoutAuthenticated.svelte  NewPassword.svelte  Notifications.svelte  Password.svelte  PasswordEditor.svelte  Passwords.svelte  SharingEditor.svelte  SidebarLayout.svelte  Spinner.svelte  Vault.svelte  Vaults.svelte
sdk/ic_vetkd_sdk_encrypted_maps/: README.md  eslint.config.mjs  package.json  tsconfig.json
sdk/ic_vetkd_sdk_encrypted_maps/src/: index.ts
sdk/ic_vetkd_sdk_encrypted_maps_example/: make_did_bindings.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
sdk/ic_vetkd_sdk_encrypted_maps_example/src/: index.test.ts  index.ts
sdk/ic_vetkd_sdk_encrypted_maps_example/test/: index.test.ts  setup.ts  test.ts
sdk/ic_vetkd_sdk_key_manager/: README.md  package.json
sdk/ic_vetkd_sdk_key_manager/src/: index.ts
sdk/ic_vetkd_sdk_key_manager_example/: eslint.config.mjs  jest.config.js  make_did_bindings.sh  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
sdk/ic_vetkd_sdk_key_manager_example/src/: index.test.ts  index.ts
sdk/ic_vetkd_sdk_key_manager_example/test/: index.test.ts  setup.ts  test.ts
sdk/ic_vetkd_sdk_utils/: README.md  eslint.config.mjs  package.json  tsconfig.json
sdk/ic_vetkd_sdk_utils/src/: index.ts
sdk/ic_vetkd_sdk_utils/test/: index.test.ts
shipstone/: safeidea-discovery-in-icp-proposal.md  safeidea-milestone-completion.md
(+22 files in other folders)
