[workspace]
members = [
    "cdk/encrypted_maps_example",
    "cdk/key_manager_example",
    "cdk/encrypted_maps",
    "cdk/key_manager",
    "cdk/test_utils",
    "cdk/types",
    "cdk/utils",
]
resolver = "2"

[workspace.package]
authors = ["The Internet Computer Project Developers"]
version = "0.1.0"
edition = "2021"
description = "Verifiably encrypted threshold key derivation (VetKD) canister development kit (CDK)"
documentation = "https://crates.io/vetkd_cdk"

[workspace.dependencies]
anyhow = "1.0.95"
candid = "0.10.2"
hex = "0.4.3"
ic-cdk = "0.13.0"
ic-cdk-macros = "0.13.0"
ic-stable-structures = "0.6.5"
ic-types = "0.7.0"
ic-vetkd-utils = { version = "0.1.0", git = "https://github.com/dfinity/ic.git" }
lazy_static = "1.5.0"
serde = "1.0.217"
serde_json = "1.0.138"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'