[package]
name = "ic-vetkd-cdk-encrypted-maps"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
hex = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
ic-vetkd-cdk-key-manager = { path = "../key_manager" }
ic-vetkd-cdk-types = { path = "../types" }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }

[dev-dependencies]
assert_matches = "1.5.0"
ic-agent = "0.38.2"
ic-vetkd-cdk-test-utils = { path = "../test_utils" }
pocket-ic = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
strum = "0.26.3"

[features]
expose-testing-api = ["ic-vetkd-cdk-key-manager/expose-testing-api"]
