[package]
name = "ic-vetkd-cdk-key-manager"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
futures = "0.3.31"
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
ic-vetkd-cdk-types = { path = "../types" }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_with = "3.11.0"

[dev-dependencies]
assert_matches = "1.5.0"
ic-agent = "0.38.2"
ic-vetkd-cdk-test-utils = { path = "../test_utils" }
pocket-ic = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[features]
expose-testing-api = []