[package]
name = "ic-vetkd-cdk-key-manager-example"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
ic-vetkd-cdk-key-manager = { path = "../key_manager" }
ic-vetkd-cdk-types = { path = "../types" }
serde = { workspace = true }

[dev-dependencies]
ic-vetkd-cdk-test-utils = { path = "../test_utils" }
ic-vetkd-utils = { workspace = true }
pocket-ic = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
reqwest = "0.12.12"

[features]
expose-testing-api = ["ic-vetkd-cdk-key-manager/expose-testing-api"]
