[package]
name = "ic-vetkd-cdk-test-utils"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.89"
candid = { workspace = true }
hex = "0.4.3"
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
ic-vetkd-cdk-types = { path = "../types" }
ic-vetkd-utils = { workspace = true }
lazy_static = "1.5.0"
rand = "0.8.4"
rand_chacha = "0.3.0"
serde = { workspace = true }
serde_bytes = "0.11.15"
serde_with = "3.11.0"
strum = "0.26.3"
strum_macros = "0.26.3"

[dev-dependencies]
ic-vetkd-cdk-types = { path = "../types", features = ["mock-time"] }
