[package]
name = "ic-vetkd-cdk-types"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
hex = { workspace = true }
ic-stable-structures = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
strum = "0.26.3"
strum_macros = "0.26.3"
