[package]
name = "ic-vetkd-cdk-utils"
authors.workspace = true
description = "Utilities encrypting and decrypting verifiably-encrypted keys on the Internet Computer."
documentation.workspace = true
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ic-vetkd-utils = { workspace = true }
