[package]
name = "ic-vetkd-example-encrypted-notes-backend"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
ic-vetkd-cdk-encrypted-maps = { path = "../../../cdk/encrypted_maps" }
ic-vetkd-cdk-types = { path = "../../../cdk/types" }
ic-vetkd-utils = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11.17"
serde_cbor = { workspace = true }

[features]
expose-testing-api = ["ic-vetkd-cdk-encrypted-maps/expose-testing-api"]
default = ["expose-testing-api"]
