[package]
name = "ic-vetkd-example-password-manager-with-metadata-backend"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
# Enable expose-testing-api to allow exployment
ic-vetkd-cdk-encrypted-maps = { path = "../../../cdk/encrypted_maps" }
ic-vetkd-cdk-types = { path = "../../../cdk/types" }
ic-vetkd-utils = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }

[features]
expose-testing-api = ["ic-vetkd-cdk-encrypted-maps/expose-testing-api"]
